# Sprout

./: .env.example  GEMINI.md  Makefile  PROJECT.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 138dc6548b00_add_non_negative_constraint_to_.py  15383e2a714d_init.py  318c430bb664_add_default_to_outreach_status.py  41706f35c7e1_add_core_sprout_database_models.py  4f7b075fa9a7_add_validations_and_constraints_to_.py  5e8143b7e46f_add_onupdate_to_outreach_updated_at.py  6dd7d1218a8f_add_farm_model.py  d41a7ab478dd_add_email_fields_to_outreach.py
backend/examples/: run_discovery_agent.py
backend/scripts/: seed_pricing_data.py  setup_gmail_token.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  analytics.py  builder.py  data_ingestion.py  discovery.py  sdr.py
backend/src/core/: config.py
backend/src/crud/: __init__.py  farm.py  inventory.py  outreach.py  pricing.py  transaction.py
backend/src/db/: session.py
backend/src/models/: __init__.py  farm.py  inventory.py  outreach.py  pricing.py  transaction.py
backend/src/schemas/: __init__.py  agent_analytics.py  agent_builder.py  agent_discovery.py  agent_sdr.py  analytics.py  email_finder.py  events.py  farm.py  google_places.py  linkedin_finder.py  market_news.py  pricing_analytics.py  review_analyzer.py  usda.py  weather.py
backend/src/services/: __init__.py  outreach.py  (+1 more)
backend/tests/: conftest.py  test_builder_agent.py
(+66 files in other folders)
