[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.129.1",
    "httpx>=0.27.0",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "playwright>=1.58.0",
    "numpy>=2.2.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "scipy>=1.15.0",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.36",
    "langgraph>=1.0.9",
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "greenlet>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]
